apps/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: bruno
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
